--- a/_chapters/03.md
+++ b/_chapters/03.md
@@ -48,6 +48,6 @@ But just like that the small woman disappeared, not with a poof of smoke or anyt
 
 "What a strange accent as well, usually I'm quite good at identifying the accents of people." - Brian pondered.
 
-He went over to the manager and asked: "Did you see the customer that just came in?". Looking up from her screen with the most bored face anyone could imagine she looked at Brian. Slowly. "I'm not sure, isn't it _your_ job to keep track of the customers?"
+He went over to the manager and asked: "Did you see the customer that just came in?". Looking up from her screen with the most bored face anyone could imagine. "I'm not sure, isn't it _your_ job to keep track of the customers?"
 
 Okay, not helpful as always, Brian walked back to organize a shelf. It was hard to stay concentrated now. Strange things are starting to pile up, first the pulverized bike lock and then the waterproof jeans. And a warning, it sounded serious. "I need to figure out how to contact the strange lady somehow. But how do I start?" - Brian thought.
