--- a/_chapters/01.md
+++ b/_chapters/01.md
@@ -1,10 +1,23 @@
 ---
-title: The worm
+title: The male Karen
 ---
 
-A little worm is making his way through the dirt, eating rotting leaves and small nuggets of food. Poking his head out of the newly wet soil is all that was needed for a nearby crow to spot it. With a quick swoop it has the worm in it's beak and heads off to it's nearby nest. Little chirping noises of despair greet the mother providing for her offspring.
-A loud rumbling noise bellowed across the field below them and startles the mother. The worm takes his chance and tries to slither away, only to fall several meters to the ground with a small "plop" sound.
-Another, even louder sounds starts to vibrate the tree. Loud chirping from the younglings adds to the symphony of the soundscape. The mother tries to shield her offspring with her wings as the whole tree is vaporized by the impact.
+"Welcome to Best Purchase, how may I help you Sir?" 
+"My computer does not work" 
+"Could you describe the problem in more detail please? Does the screen light up when you start it for example?"
+"I just told you it doesn't work, why are you asking all these questions, you're supposed to be the _Genius_" - the increasingly upset customer says, pointing to the sign on the chest of Brian's shirt
+"Sir, I need to ask you these questions to be able to diagnose your problem, I can assure you Best Purchase values you as a customer and a will try to help you in any way possible. Did you bring your computer with you in any case?"  
+The man takes out a worn out plastic bag that reeks strongly of beer and turns it over onto the desk. Out slides a laptop, visibly sticky with a very strong odor.
+"We should really be given gloves" - he thinks to himself, touching the filthy piece of technology. He's barely able to open it, the screen almost seems to be glued to the keyboard. With a _schlorp_ sound it finally opens and presents it's nasty interior. It has very apparently been drenched in beer and left out for a while. All sorts of mold is growing on the biohazard the customer calls his computer.
+"I'm afraid we are unable to rescue it Sir, it seems that something has been spilled on it". 
+"I want a refund! It said it's water proof on the box!" - the customer bellows. Internally calling bullshit on his claims, Brian gathers all his strength to be polite again.
+"Of course Sir, may I see your receipt?"
 
-A small red LED just turned on a large dashboard. A thick layer of dust covers the console, except for a few keys that are used frequently. Carry swivels her chair upright and takes a look at the now blinking light.
-``` SECTOR A31 ``` is legible above the signal.
+The man hands him a crumpled up piece of paper, which is obviously not from _Best Purchase_.
+Brian starts to open his mouth to let him know, but reconsiders and says: "I think send this to our refund department, which will take a look."
+Surprisingly the older man seems to be content with that and complies with leaving his contact details and heading off.
+"Oof,  the stuff I put up with" - Brian thinks to himself. Taking his break in the employee lounge. He brought his, non-sticky, laptop and continues typing. On the screen little black pixels are competing for resources, procreating, multiplying, dying. Brian was always interested in how life worked, and loved to tinker with simulations of cellular automata. It gave him great joy to see how simple rules could turn into increasingly complex organisms.
+"Brian - quit playing with your pixels, your break is over!" - Ashe the manager calls him.
+Most of the black dots ceased moving, except for one cluster, that seemed to continue evolving. Brian murmurs "hmm" and closes his laptop.
+
+After a grueling day of working with customers, and being the scapegoat for everything Brian is finally allowed to head home. He's the last one to leave, so he locks the doors and makes sure all the lights are off. It's a cold, misty evening, the hustle and bustle of the never sleeping city provides a constant background tune. Brian finds his bike among a lot of other ones, he tries to unlock it, but it seems that the key just did not fit, it almost seems like it was not his bike. He double checked, Sticker from leetcon, check. Mismatched tires, check. Red paint that is starting to flake off, check. There was no doubt, it was his bike. Brian got more and more irritated, after such a long day of being belittled, this was the last straw. He started to yell at the bike and particularly the darn lock that his key just refused to go into. Infuriated he once again jammed the key into the hole only to realize that the keyhole and the locking mechanism had vanished completely. He looked at his hands, they were covered in black dust. The lock, nothing holding it together anymore fell off. "That was strange" Brian thought to himself, but it was also nice at least he could head home now, he just hoped that his key for his apartment would still work. "Can't afford a new door as well"
