--- a/_chapters/02.md
+++ b/_chapters/02.md
@@ -1,23 +1,53 @@
 ---
-title: The male Karen
+title: Wet pants
 ---
 
-"Welcome to Best Purchase, how may I help you Sir?" 
-"My computer does not work" 
-"Could you describe the problem in more detail please? Does the screen light up when you start it for example?"
-"I just told you it doesn't work, why are you asking all these questions, you're supposed to be the _Genius_" - the increasingly upset customer says, pointing to the sign on the chest of Brian's shirt
-"Sir, I need to ask you these questions to be able to diagnose your problem, I can assure you Best Purchase values you as a customer and a will try to help you in any way possible. Did you bring your computer with you in any case?"  
-The man takes out a worn out plastic bag that reeks strongly of beer and turns it over onto the desk. Out slides a laptop, visibly sticky with a very strong odor.
-"We should really be given gloves" - he thinks to himself, touching the filthy piece of technology. He's barely able to open it, the screen almost seems to be glued to the keyboard. With a _schlorp_ sound it finally opens and presents it's nasty interior. It has very apparently been drenched in beer and left out for a while. All sorts of mold is growing on the biohazard the customer calls his computer.
-"I'm afraid we are unable to rescue it Sir, it seems that something has been spilled on it". 
-"I want a refund! It said it's water proof on the box!" - the customer bellows. Internally calling bullshit on his claims, Brian gathers all his strength to be polite again.
-"Of course Sir, may I see your receipt?"
+_Drip_ _Drip_ _Drip_ "The damn roof never holds" - Brian thinks to himself, placing the last cup he owns under the dripping ceiling.  He thinks about the strange dust that his bike lock turned into, his hands are still stained from it. He decides to scrape some of it onto a plate and take a closer look. He takes his lighter and lights it, some of it shrivels and some of it starts to glow. He did not see anything special about the dust itself. He decided to check out the lock itself. Strangely it looked like there never was any kind of lock, it just had a smooth surface where it would connect, it did not look like anything was cut off or ripped out. A small beeping noise distracted him from fiddling with the dust, he wipes it on his pants.
 
-The man hands him a crumpled up piece of paper, which is obviously not from _Best Purchase_.
-Brian starts to open his mouth to let him know, but reconsiders and says: "I think send this to our refund department, which will take a look."
-Surprisingly the older man seems to be content with that and complies with leaving his contact details and heading off.
-"Oof,  the stuff I put up with" - Brian thinks to himself. Taking his break in the employee lounge. He brought his, non-sticky, laptop and continues typing. On the screen little black pixels are competing for resources, procreating, multiplying, dying. Brian was always interested in how life worked, and loved to tinker with simulations of cellular automata. It gave him great joy to see how simple rules could turn into increasingly complex organisms.
-"Brian - quit playing with your pixels, your break is over!" - Ashe the manager calls him.
-Most of the black dots ceased moving, except for one cluster, that seemed to continue evolving. Brian murmurs "hmm" and closes his laptop.
+The noise came from his laptop. His simulation of the black pixels had created it. Interested he takes a look. The pixels have rearranged themselves and gotten much smaller, spanning a complex web of connections and paths. It kind of resembled a cityscape with tiny little squares moving around and fluidly changing the lines.
 
-After a grueling day of working with customers, and being the scapegoat for everything Brian is finally allowed to head home. He's the last one to leave, so he locks the doors and makes sure all the lights are off. It's a cold, misty evening, the hustle and bustle of the never sleeping city provides a constant background tune. Brian finds his bike among a lot of other ones, he tries to unlock it, but it seems that the key just did not fit, it almost seems like it was not his bike. He double checked, Sticker from leetcon, check. Mismatched tires, check. Red paint that is starting to flake off, check. There was no doubt, it was his bike. Brian got more and more irritated, after such a long day of being belittled, this was the last straw. He started to yell at the bike and particularly the darn lock that his key just refused to go into. Infuriated he once again jammed the key into the hole only to realize that the keyhole and the locking mechanism had vanished completely. He looked at his hands, they were covered in black dust. The lock, nothing holding it together anymore fell off. "That was strange" Brian thought to himself, but it was also nice at least he could head home now, he just hoped that his key for his apartment would still work. "Can't afford a new door as well"
+Brian initially started this toy project to explore how simple rules can create a lot of complexity in a short time. The pixels were programmed to follow a path similar how the lifecycle of animals is in the real world. Two pixels may procreate and create a fresh new baby pixel. Overpopulation will kill pixels. 
+
+
+"Hmm I never programmed anything to emit sounds" - Brian wonders. But it was clear, the intricate webs somehow made a sound. He wasn't sure if he just imagined it. Maybe... yeah it couldn't have been. Glancing at the clock, it was time for work. again... 
+
+
+With his head down Brian quickly grabbed his laptop and a raincoat to head out, hoping his apartment would not be flooded by this evening.
+
+Cycling through the bustling city he wished it would not rain. Every drip made his pants more and more soaked and he had no way to dry them before work. Additionally with no functioning bike lock, he would need to take the bike into the back room. Ashe the grumpy manager will not like it. "Screw her" - Brian curses. He dreaded needing to talk to customers with asinine requests, the same problems every day. To distract himself he thought about how the rain is actually absorbed into his pants, how the fibers seemed to have been engineered perfectly to absorb the most water possible somehow. Why couldn't the fibers be like those cool hydrophobic materials? Hell even plants are able to create these. Tiny hairs are preventing the water to enter and instead allow it bead up into droplets. If only he were able to change his pants just now into a tiny hydrophobic leaf... - and he did. In that moment he noticed his legs feeling less soaked, weight draining from his pieces of fabric over his legs. No longer were the clinging to his legs uncomfortably.
+
+"What the hell happened?" - Brian stopped on the streets patting his pant legs. Dry, with the water beading up into droplets, exactly as he had imagined it. With a little more spring in his step he made his way into the computer shop.
+
+"What are you smiling at? You're 30 minutes late." - Ashe the older manager asks. Her deep sunken eyes and grey streaks in her hair tell a story about an unfulfilled life. Brian mumbles something about pants and rain and quickly walks into the back of the store to drop off his raincoat. His raincoat was still soaked and dripping.
+
+After a while of tending to annoying customers and wishing he died in his sleep Brian noticed a carved piece of wood that was in his pocket. It was about as big as his hand and pointy at the end. It felt quite good in his hand, it even had some kind of handle that fit his hand quite well. He decided to keep it and put it in his backpack for later. Today was a strange day, in the afternoon most customers actually seemed nicer than they usually were. Maybe it was just the small thing of having overcome a small inconvenience. Sometimes that's all it takes to change the perception of a day. 
+
+Maybe it's not really the customers fault after all, they are just there to get help and feel frustrated with technology. _any sufficiently advanced technology is indistinguishable from magic_ - some quote that Brian once read. This is exactly what the crusty laptops and printers the customers struggled with thought about it. There was no way to know how any of this worked, it just did it. With magic somehow, and if it doesn't work you need to go to the local computer wizard and hear a lot of mumbo-jumbo about how the magic is done, and how you did it wrong. How could anyone ever understand it. It just did things.
+
+"Another peasant seeking help of the resident wizard Brian" - he thought hearing the sound of door.
+
+"What can I do for you?" - Brian asked, a little more cheerfully as he approached the short brunette that just walked into the shop.
+
+"Yes, hi are you Brian?" - she asked with a strange hint of confidence in her voice. Brian points to his name tag. "Indeed, how may I help you?"
+
+"I'm not here for a computer problem, I'm here to warn you". "Warn me? Of what?" - Brian asked.
+
+"About the whole pants situation, it is unwise to use your powers like this"
+
+"How do you ... how do you know about what happened to my pants?"
+
+"Well, it's rather obvious isn't it? In any case, I wouldn't do such a thing again, otherwise _they_ will notice". She spoke with quite a strange accent, Brian could not pinpoint and she seemed to put in a lot of spooky undertones into the "they".
+
+"Who are you, who is they?!" - Brian started to become really confused.
+
+"You will figure it out, just contact me once you are ready."
+
+But just like that the small woman disappeared, not with a poof of smoke or anything at all. It just was, as if she was never there. Brian started to doubt his eyes, and questioned what was in his coffee this morning.
+
+"How should I contact her? She did not tell me anything, no phone number, no email address, no anything" - Brian thought to himself.
+
+"What a strange accent as well, usually I'm quite good at identifying the accents of people." - Brian pondered.
+
+He went over to the manager and asked: "Did you see the customer that just came in?". Looking up from her screen with the most bored face anyone could imagine. "I'm not sure, isn't it _your_ job to keep track of the customers?"
+
+Okay, not helpful as always, Brian walked back to organize a shelf. It was hard to stay concentrated now. Strange things are starting to pile up, first the pulverized bike lock and then the waterproof jeans. And a warning, it sounded serious. "I need to figure out how to contact the strange lady somehow. But how do I start?" - Brian thought.
