--- a/_chapters/03.md
+++ b/_chapters/03.md
@@ -3,7 +3,7 @@ title: Rice
 ---
 <details>
   <summary>Click here to reveal a potential spoiler but a good meme: Chapter 3 with no context</summary>
-  <img src="_chapters/03/Chapter 3 No Context.png">
+  <img src="{{ site.url }}/_chapters/03/Chapter 3 No Context.png">
 </details>
 
 <hr>
