--- a/_chapters/03.md
+++ b/_chapters/03.md
@@ -3,7 +3,7 @@ title: Rice
 ---
 <details>
   <summary>Click here to reveal a potential spoiler but a good meme: Chapter 3 with no context</summary>
-  <img src="{{ site.url }}/_chapters/03/Chapter 3 No Context.png">
+  <img src="res/03/Chapter 3 No Context.png">
 </details>
 
 <hr>
@@ -65,7 +65,7 @@ Shoving down a spoon of the hearty dish, he told Bo about all the strange things
 
 Bo with a twinkle in his eye looked at Brians rice bowl intently. Slowly all the grains of rice started to align in straight lines, perfectly stacking on top of each other. Brian almost choked on his food.
 
-<img src="_chapters/03/rice.jpeg" alt="rice" width="200"/>
+<img src="res/03/rice.jpeg" alt="rice" width="200"/>
 
 "How did you ...?"
 
