--- a/_chapters/00.md
+++ b/_chapters/00.md
@@ -1,5 +1,6 @@
 ---
 title: The worm
+id: 00-the-worm
 ---
 
 A little worm is making his way through the dirt, eating rotting leaves and small nuggets of food. Poking his head out of the newly wet soil is all that was needed for a nearby crow to spot it. With a quick swoop it has the worm in it's beak and heads off to it's nearby nest. Little chirping noises of despair greet the mother providing for her offspring.
