--- a/_chapters/02.md
+++ b/_chapters/02.md
@@ -1,5 +1,6 @@
 ---
 title: Wet pants
+id: 02-wet-pants
 ---
 
 _Drip_ _Drip_ _Drip_ "The damn roof never holds" - Brian thinks to himself, placing the last cup he owns under the dripping ceiling.  He thinks about the strange dust that his bike lock turned into, his hands are still stained from it. He decides to scrape some of it onto a plate and take a closer look. He takes his lighter and lights it, some of it shrivels and some of it starts to glow. He did not see anything special about the dust itself. He decided to check out the lock itself. Strangely it looked like there never was any kind of lock, it just had a smooth surface where it would connect, it did not look like anything was cut off or ripped out. A small beeping noise distracted him from fiddling with the dust, he wipes it on his pants.
