--- a/_chapters/03.md
+++ b/_chapters/03.md
@@ -1,5 +1,6 @@
 ---
 title: Rice
+id: 03-rice
 ---
 <details>
   <summary>Click here to reveal a potential spoiler but a good meme: Chapter 3 with no context</summary>
