--- a/_chapters/04.md
+++ b/_chapters/04.md
@@ -1,5 +1,6 @@
 ---
 title: Silk
+id: 03-silk
 ---
 <details>
   <summary>Click here to reveal a potential spoiler but a good meme: Chapter 4 with no context</summary>
