--- a/_chapters/04.md
+++ b/_chapters/04.md
@@ -1,6 +1,6 @@
 ---
 title: Silk
-id: 03-silk
+id: 04-silk
 ---
 <details>
   <summary>Click here to reveal a potential spoiler but a good meme: Chapter 4 with no context</summary>
@@ -9,14 +9,14 @@ id: 03-silk
 
 <hr>
 Brian was really starting to get worried. What was the first thing he did after he received the warning? He stupidly told his manager. What if Ashe belonged to the people that the strange woman warned him about? Also, so far he just ignored all of the warnings, but he couldn't just leave it be. Something in him drove him to explore more about his abilities, even though he was scared of the consequences. Maybe his good friend Bo will finally explain everything, especially how to contact the lady and what he needed to be careful about. 
-Two more hours left, he wished he was able to fast forward time. So far he was able to get what he wished for, when he concentrated very hard on it. Maybe he could manipulate time? That did sound interesting but also very risky. What if he got caught in a groundhog-day scenario, stop time or create some other timey-wimey stuff? Brian thought it would best to not risk it at this time. But he liked pondering about all the possibilities. He still did not figure out what exactly he could do, maybe he was only able to change stuff with fibers? "Like the air fire and water benders I know from TV shows. Maybe I'm a ... fabric bender?".
+Two more hours left, he wished he was able to fast forward time. So far he was able to get what he wished for, when he concentrated very hard on it. Maybe he could manipulate time? That did sound interesting but also very risky. What if he got caught in a groundhog-day scenario, stop time or create some other timey-wimey stuff? Brian thought it would best to not risk it at this time. But he liked pondering about all the possibilities. He still did not figure out what exactly he could do, maybe he was only able to change stuff with fibers? "Like the air, fire and water benders I know from TV shows. Maybe I'm a ... fabric bender?".
 
 _Beep beep beep_ - The alarm that Brian set finally rang. It was time to leave. He was ecstatic. He grabbed his coat, and made sure to pack his bike lock and wooden wand. The city was quiet at this time. Brian felt the cool breeze of the fresh midnight air on his skin. He took a deep breath. He was not this excited and also worried since forever. He increased his pace, he needed to release the pent up nervousness somehow, he almost ran over a man on the sidewalk. Finally he saw the familiar neon letters of his favorite eatery. The bald silhouette of his dear friend appeared. He was cleaning the counters peacefully. Brian walked to the counter, Bo looked up from cleaning a glass with a filthy rag and smiled. The place was empty. 
 
 "You are right on time, I'm just closing up" 
 
 Bo rummaged in his pocket and held out a piece of chocolate in his hand for Brian to take. "Put this in your mouth, it will help".
-A bit confused about receiving pocket chocolate Brian accepted, blew off a bit of dust of the piece and ate the dark piece of chocolate.
+A bit confused about receiving pocket chocolate Brian accepted, blew off a bit of dust off of the piece and ate the dark piece of confectionary.
 Bo put down a glass and the rag and closed down the restaurant. Bo pointed to a dark place in the alley next to his restaurant. "Please, follow me there. Do not be afraid".
 
 Bo was acting quite mysteriously and Brian started to suspect that maybe something weird was going on. But his curiosity and hunger for answers got the upper hand. He followed Bo into the dark alley.
@@ -34,13 +34,13 @@ Brian thought hard about this, what if he just walked away from all this crazine
 
 "The pants too, please I don't have all night"
 
-Reluctantly Brian started to take off his pants. Bo took the wand and broke it in two, revealing a silvery shining core inside. It seemed to be made of some kind of bleached hair.
+Reluctantly Brian hesitantly started to take off his pants. Bo took the wand and broke it in two, revealing a silvery shining core inside. It seemed to be made of some kind of bleached hair.
 
 "No! My wand! Why did you do that?"
 
 Bo ignored the question and put the pants and bike lock in a pile. He lazily threw on the broken wand as well. He looked at them intently and then put his foot on the items. They crumbled to dust as if there were just loosely held together before.
 
-Brian looked at the pile that used to be his pants and other personal items. He was still mad about the wand, it was quite a fascinating object and he kind of felt that he was a proper wizard with it now.
+Brian looked at the pile that used to be his pants and other personal items. He was still mad about the wand, it was quite a fascinating object and he kind of felt that he was a proper wizard with it.
 
 "I'm sorry to have upset you, you will understand soon" - Bo said with kindness in his eyes.
 
@@ -67,13 +67,13 @@ Brian could barely close his gaping jaw. Bo seemed so casual about all of this s
 
 "You must understand that this is all super weird to me Bo. First of all are we under the ocean?"
 
-"Yes, well spotted. I like fish a lot, so I thought why not build myself a little house under the sea to appreciate their natural beauty? Did you appreciate the bubble I made, I preferred it to glass, I just used air and the surface tension of water holds it up. It seemed like a much better solution to me."
+"Yes, well spotted. I like fish a lot, so I thought why not build myself a little house under the sea to appreciate their natural beauty? Did you appreciate the bubble I made, I preferred it to glass, I just used air and a bit of gravity modification to keep it floating. It seemed like a much better solution to me."
 
 The silk worms started to slowly but surely wiggle away and reveal a perfect pair of white-grey pants, made completely of silk.
 
-"Go ahead, put it on, don't be rude they spent a lot of effort on it." Bo nodded to the wiggling worms. They did not respond, they just crawled back to the shrubbery and crevices they came from.
+"Go ahead, put it on, don't be rude they spent a lot of effort on it." Bo nodded to the wiggling worms. They did not respond, they just crawled back into the shrubbery and crevices they came from.
 
-With a bit of hesitation Brian walked over and put on the pair of silky pants. They were incredibly... Well silky. They fit him perfectly.
+With a bit of hesitation Brian walked over and put on the pair of silky pants. They were incredibly... well, silky. But they fit him perfectly.
 
 "Come now, let's have some tea and chat. I have a lot to tell you, and I am sure you have a lot of questions"
 
