--- a/_chapters/05.md
+++ b/_chapters/05.md
@@ -9,26 +9,40 @@ id: 05-sector-a31
 
 <hr>
 
-The slow rumbling noise of a waterwheel sounded in the distance. It was a cold foggy morning in the small village of Waterford. Priscilla woke up early today to tend to the chickens, they were already up since the break of dawn and demanded food and attention. Priscilla liked the quietness and fresh air of the early morning. The disorganized clucking of the chickens hungrily searching for food. She took the bucket with chicken feed and tossed out a handful to see them quickly gathering and greedily picking the seeds and other nuggets of food. While they were busy, she checked the coops to find a handful of freshly laid eggs. They still felt warm in her hand and had a few white feathers stuck to them. Breakfast was sorted for today. She brought back the eggs and put them on the kitchen counter. The kids would be up any moment now, just enough time to prepare breakfast and her much needed cup of coffee. The coffee beans crackled while she ground them up with her hand grinder. The smell of coffee started to wake her up a little more and she set a pot of water to boil. The creaking of the stairs let her know that someone else was already up, it was Jacob their youngest. Sleepily, he rubbed his eyes with his fist and asked: "Morning Mom, what's for breakfast?". "Good morning sweety, I just went to fetch some eggs from the coop, do you wanna scramble the eggs or cut the bread?"
+The slow rumbling noise of a waterwheel sounded in the distance. It was a cold foggy morning in the small village of Waterford. Priscilla woke up early today to tend to the chickens, they were already up since the break of dawn and demanded food and attention. Priscilla liked the quietness and fresh air of the early morning. The disorganized clucking of the chickens hungrily searching for food. She took the bucket with chicken feed and tossed out a handful to see them quickly gathering and greedily picking the seeds and other nuggets of food. While they were busy, she checked the coops to find a handful of freshly laid eggs. They still felt warm in her hand and had a few white feathers stuck to them. Breakfast was sorted for today. She brought back the eggs and put them on the kitchen counter. The kids would be up any moment now, just enough time to prepare breakfast and her much needed cup of coffee. The coffee beans crackled while she ground them up with her hand grinder. The smell of coffee started to wake her up a little more and she set a pot of water to boil. The creaking of the stairs let her know that someone else was already up, it was Jacob their youngest. Sleepily, he rubbed his eyes with his fist and asked: "Morning Mom, what's for breakfast?".
+
+"Good morning sweety, I just went to fetch some eggs from the coop, do you wanna scramble the eggs or cut the bread?"
+
+
 "Cut bread!" - he happily exclaimed, excited to be helpful.
+
 
 "Remember to be careful with the knife" Priscilla said, watching the eager kid grab the bread out of the pantry. The sound of the rooster distracted her just in the wrong moment. In the corner of her eye she saw the freshly sharpened bread knife fall. The blade was interrupted by the small kids leg and sliced it up lengthwise. Jacob looked down at his leg, not knowing what to do. Slowly a droplets of blood started to appear along the injured skin. Priscilla dropped the eggs she was holding in her hands and rushed to her wounded child. Tears started to form in Jacobs eye. Priscilla reacted fast, and intently looked at the mangled leg. She imagined how the muscle fibers, tissue and veins arteries interacted. How blood would pump through it, filling the cells with energy and life. Just like that, the wound slowly started to close up, muscle fibers connecting again and the skin connecting again just like a zipper leaving no scar or trace of anything. Jacob barely had enough time to realize that the pain had subsided as well.
 
+
 After this act of motherly protection Priscilla felt extremely drained. All the energy that the healing process would normally take was now burdening Priscilla instead and it hit her all at once. She felt like she hadn't eaten in a week and hiked up a mountain.
 
-- A few hundred Miles away
+<hr>
 
-Carry looked at the blinking light on the console. ` SECTOR A31 `. "And I thought I could slack off work today" - Carry mumbled, slowly shifting her chair into the upright position. The room was dimly lit by the large console in front of her, covered with small bulbs that were either glowing faintly or turned off. The small room had just enough space for the console and two chairs, a left over packet of ramen was thrown lazily on the second chair.
-Carry took a large key and inserted it into a keyhole located in the center of the console. She turned the lock with a loud "Clack" noise. The machine inside started to make rumbling, mechanical clicking sounds. Hundreds if not thousands of small gears turning, interlocking. The sign that said ` SECTOR A31 ` started to rotate slowly and reveals that it was covered with buttons underneath. Carry lazily watched the machinery. "Why does everything here need to be so slow?". After the whirring and rumbling stopped, Carry leaned over the newly exposed controls that were still shiny, not covered by weeks worth of dust. With practiced taps Carry operated the new interface. A brow started to form on Carry's face. This meant trouble. 
+
+Carry looked at the blinking light on the console. `SECTOR A31`. "And I thought I could slack off work today" - Carry mumbled, slowly shifting her chair into the upright position. The room was dimly lit by the large console in front of her, covered with small bulbs that were either glowing faintly or turned off. The small room had just enough space for the console and two chairs, a left over packet of ramen was thrown lazily on the second chair.
+Carry took a large key and inserted it into a keyhole located in the center of the console. She turned the lock with a loud "Clack" noise. The machine inside started to make rumbling, mechanical clicking sounds. Hundreds if not thousands of small gears turning, interlocking. The sign that said `SECTOR A31` started to rotate slowly and reveals that it was covered with buttons underneath. Carry lazily watched the machinery. "Why does everything here need to be so slow?". After the whirring and rumbling stopped, Carry leaned over the newly exposed controls that were still shiny, not covered by weeks worth of dust. With practiced taps Carry operated the new interface. A brow started to form on Carry's face. This meant trouble. 
+
 
 Dusting off a rotary dial telephone Carry quickly dialed a number. A raspy male voice answered: "Agent `4341525259`, what do you have to report?"
 
+
 "Sector A31 had some illicit 'use', send the eradication squad to investigate and exterminate"
+
 
 "Roger, Sector A31, a squad will be dispatched ASAP"
 
+
 The call ended. Carry sat back in her chair, using the buttons on the console she opened a small monochrome screen with green letters.
 On the dimly lit display she could see the squad she just ordered getting dressed into their combat uniforms. Tight black pants and shirts with a dark coat over them. Their faces were always covered, they always looked the same. Carry could never differentiate any of them, and they never spoke except to acknowledge orders. Carry wondered if they even had names, a family or hobbies. They just seemed like empty shells, built to fill out orders. The view switched to a different camera, it showed a small helicopter. It was also painted in black except for a few shiny metallic parts. The squad entered it, the rotor-blades already started spinning up. The view switched to the inside of the helicopters cabin. The squad members sat there in their preassigned seats, perfectly uniform. Carry could not detect any kind of movement except for their breathing, and even this was perfectly in sync. The video stream on Carry's display cut out. 
+
+
 Agents could never see where the squads would be sent exactly, the agency wanted to avoid people associating the sectors with real life places. Half an hour later the video feed came back, the agents had just reached their destination. It seemed to be some small rural village in the countryside. Exiting the chopper the squad dispersed, turning on their large flashlights and searching the area. After a while Carry saw that they seemed to have found their target: A young woman with plain white clothes that was hiding in a barn. They roughly dragged her out in the open ripping her dress in the process. The woman struggled against them and tried to get free, but the trained iron grips of the agents kept her in place. With wordless communication the squad members coalesced in the small courtyard in front of the barn. One of the team members pulled out a handheld device. It was roughly the size of a walkie talkie and had a large antenna. A second masked guy took out two cables with clamps on the end. One end was connected to the device and the other the each of the ears on the womans head. The masked person pointed the device at the woman and pressed a series of buttons. The womans face contorted in a horrible fashion and Carry was glad that her gut wrenching scream was not transmitted over the communication line. The woman, still held up by two of the squad members collapsed, seemingly lifeless. They slung her over their shoulders and took her to the chopper. They roughly threw her to the floor and got into the aircraft as well. The video feed cut out again.
+
 
 With a long sigh Carry leaned back in her chair. She was trained for this moment, but it never got easier watching these exterminations. She knew they needed to be done for the safety of the world. This was ingrained in her in the countless hours in the academy. "Uncontrolled use of powers may result in an unstable state of the universe that cannot be corrected", this lesson was repeated over and over. These powers were taught be extremely dangerous and even attempting any of it would result expulsion of the academy and in the worst case, extermination. Still, Carry wondered if there couldn't be another approach. Why did it need to be so violent? Couldn't you just reason with the people that used the powers? They are normal people, that just discovered something in the universe that most other people were too preoccupied or blind to see. The academy tells you not to overthink these kinds of things. The way incidents are handled were done like this for millennia, with great success, it is better to not question it. Still something in Carry did not like it, but what was she supposed to do? There was no way to quit the Agency. At least she never heard of anyone that successfully did it. They all "mysteriously" disappeared, which was probably code for being exterminated. Not something Carry wanted to risk at this time.
