--- a/_chapters/05.md
+++ b/_chapters/05.md
@@ -25,8 +25,14 @@ After this act of motherly protection Priscilla felt extremely drained. All the 
 <hr>
 
 
-Carry looked at the blinking light on the console. `SECTOR A31`. "And I thought I could slack off work today" - Carry mumbled, slowly shifting her chair into the upright position. The room was dimly lit by the large console in front of her, covered with small bulbs that were either glowing faintly or turned off. The small room had just enough space for the console and two chairs, a left over packet of ramen was thrown lazily on the second chair.
-Carry took a large key and inserted it into a keyhole located in the center of the console. She turned the lock with a loud "Clack" noise. The machine inside started to make rumbling, mechanical clicking sounds. Hundreds if not thousands of small gears turning, interlocking. The sign that said `SECTOR A31` started to rotate slowly and reveals that it was covered with buttons underneath. Carry lazily watched the machinery. "Why does everything here need to be so slow?". After the whirring and rumbling stopped, Carry leaned over the newly exposed controls that were still shiny, not covered by weeks worth of dust. With practiced taps Carry operated the new interface. A brow started to form on Carry's face. This meant trouble. 
+Carry looked at the blinking light on the console. `SECTOR A31`.
+
+"And I thought I could slack off work today" - Carry mumbled, slowly shifting her chair into the upright position. The room was dimly lit by the large console in front of her, covered with small bulbs that were either glowing faintly or turned off. The small room had just enough space for the console and two chairs, a left over packet of ramen was thrown lazily on the second chair.
+Carry took a large key and inserted it into a keyhole located in the center of the console. She turned the lock with a loud "Clack" noise. The machine inside started to make rumbling, mechanical clicking sounds. Hundreds if not thousands of small gears turning, interlocking. The sign that said `SECTOR A31` started to rotate slowly and reveals that it was covered with buttons underneath. Carry lazily watched the machinery. 
+
+"Why does everything here need to be so slow?". 
+
+After the whirring and rumbling stopped, Carry leaned over the newly exposed controls that were still shiny, not covered by weeks worth of dust. With practiced taps Carry operated the new interface. A brow started to form on Carry's face. This meant trouble. 
 
 
 Dusting off a rotary dial telephone Carry quickly dialed a number. A raspy male voice answered: "Agent `4341525259`, what do you have to report?"
